 5. Re-add zooming to MAI view.
 6. Get next alarm from status message (requires LMS8.5) and show in player
    menu, toolbar, and in 'Manage players' dialog.
 7. When re-show group volume dialog use any previous volumes as defaults, to
    improve initial display.
 8. Add release-type specific icons.
 9. When shrinking jumplist remove keys with fewest items.
10. Update Axios library to 1.6.7
11. Allow adding Bandcamp and Spotify tracks to playlists.

4.3.4
-----
1. Try not to crop radio station logos in favourites.
2. Fix missing icons from 'Extras' plugins if Material is set as default skin.
3. Tweak queue toolbar layout.
4. Always restore queue pinned and shown state as per settings, regardless of
   window size.

4.3.3
-----
1. When showing now-playing context menu reset favIcon and favUrl so that these
   are updated with current track.
2. Only show ratings actions if configured to show ratings.
3. Fix requesting extid (for emblems) and ratings in browse commands.
4. Tweak Tidal emblem.
5. Fix duplicated tech info in browse view when also showing ratings.
6. Update translations.
7. Fix listing all drive selectors in file/folder dialog for Windows.

4.3.2
-----
1. Revert back to '1' for enabled bool server side items.
2. If jumplist only contains headers (e.g. as in 'New Music') then show if
   there are at least 5 times the number of items as there are jumplist
   entries.
3. Fix queue backdrop if desktop layout, pinned, and not using background
   images.
4. Trap contextmenu event in longpress handler, as opposed to using an empty
   handler.
5. Fix erroneously splitting of genre string.
6. Fix 'Live'/'Bootleg' release type option.
7. Only group all releases by type if LMS's 'groupArtistAlbumsByReleaseType'
   setting is set to 2
8. Add icon for ZenRadio.
9. Add 'tidal' and 'pyrrha' to emblems/track-sources.

4.3.1
-----
1. Fix view height issues when rotating.
2. Fix closing of 'Add to playlist' dialog.

4.3.0
-----