@@ -521,9 +521,14 @@ function parseBrowseResp(data, parent, options, cacheKey, parentCommand, parentG
                         i.stdItem = STD_ITEM_ONLINE_ARTIST;
                     } else if (i.presetParams.favorites_url.startsWith("spotify:album:")) {
                         i.stdItem = STD_ITEM_ONLINE_ALBUM;
-                    } else if (i.presetParams.favorites_url.startsWith("spotify:track:") ||
-                               /*i.presetParams.favorites_url.startsWith("youtube://") || YouTube only shows URL if saved to playlist? */
-                               ( i.presetParams.favorites_url.startsWith("https:") && i.presetParams.favorites_type=="audio" && command=="bandcamp")) {
+                    } else if (i.presetParams.favorites_type=="audio" &&
+                               ( i.presetParams.favorites_url.startsWith("spotify:track:") ||
+                                 i.presetParams.favorites_url.startsWith("qobuz://") ||
+                                 i.presetParams.favorites_url.startsWith("tidal:") ||
+                                 i.presetParams.favorites_url.startsWith("wimp:") ||
+                                 i.presetParams.favorites_url.startsWith("deezer:") ||
+                                 /*i.presetParams.favorites_url.startsWith("youtube://") || YouTube only shows URL if saved to playlist? */
+                                 ( i.presetParams.favorites_url.startsWith("https:") && command=="bandcamp"))) {
                         numTracks++;
                         isOnlineTrack = true;
                     }
