@@ -15,7 +15,8 @@
  8. Add release-type specific icons.
  9. When shrinking jumplist remove keys with fewest items.
 10. Update Axios library to 1.6.7
-11. Allow adding Bandcamp and Spotify tracks to playlists.
+11. Allow adding Bandcamp, Deezer, Qobuz, Spotify, and Tidal tracks to
+    playlists.
 
 4.3.4
 -----
